test/files/neg/t7891.scala
class B { self =>
  def this(x: Any) { this() ; new Object { self } }
}